--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
     },
     "require": {
         "php":  ">=5.4.0",
-        "ext-openssl": "*",
-        "ext-mcrypt":  "*"
+        "ext-openssl": "*"
     }
 }
